# sdl3retro

./: CMakeLists.txt
include/: audio.hpp  core.hpp  input.hpp  input_gamepad.hpp  input_keyboard.hpp  libretro.h
include/glad/: gl.h
src/: audio.cpp  core.cpp  input.cpp  main.cpp
